--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,6 +21,7 @@ const { title } = Astro.props;
 			rel='preconnect'
 			href='https://fonts.gstatic.com'
 		/>
+		<link rel="stylesheet" href="https://use.typekit.net/myr8gaf.css">
 		<link
 			rel='icon'
 			type='image/png'
