Add roof cleaning page

--- a/src/pages/roof-cleaning.astro
+++ b/src/pages/roof-cleaning.astro
@@ -14,5 +14,75 @@ import Footer from '@components/Footer.astro';
 			</div>
 		</div>
 	</div>
+	<div class="container pt-9 pb-12 md:pb-16">
+		<div class="xl:px-28 flex flex-col md:flex-row gap-8 md:gap-0 justify-between md:items-center">
+			<div class="md:w-2/5 lg:w-[30%] xl:w-1/4 space-y-6 md:space-y-12">
+				<div>
+					<div class="flex gap-1 md:gap-2 mb-5 md:mb-7">
+						<img src="/img/icon-lines.svg" class="h-4 md:h-6 mt-1 md:mt-px" alt="">
+						<h2 class="text-brand-primary font-medium text-2xl/[24px] md:text-3xl/[30px]">Waarom uw dak laten reinigen</h2>
+					</div>
+					<ul class="list-inside">
+						<li class="flex gap-2 text-xs text-brand-primary">
+							<svg class="text-brand-orange h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M9.9997 15.1709L19.1921 5.97852L20.6063 7.39273L9.9997 17.9993L3.63574 11.6354L5.04996 10.2212L9.9997 15.1709Z"></path></svg>
+							Voorkom schade en hoge kosten
+						</li>
+						<li class="flex gap-2 text-xs text-brand-primary">
+							<svg class="text-brand-orange h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M9.9997 15.1709L19.1921 5.97852L20.6063 7.39273L9.9997 17.9993L3.63574 11.6354L5.04996 10.2212L9.9997 15.1709Z"></path></svg>
+							Hogere levensduur van uw dak
+						</li>
+						<li class="flex gap-2 text-xs text-brand-primary">
+							<svg class="text-brand-orange h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M9.9997 15.1709L19.1921 5.97852L20.6063 7.39273L9.9997 17.9993L3.63574 11.6354L5.04996 10.2212L9.9997 15.1709Z"></path></svg>
+							Geen vuile dakgoten meer
+						</li>
+						<li class="flex gap-2 text-xs text-brand-primary">
+							<svg class="text-brand-orange h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M9.9997 15.1709L19.1921 5.97852L20.6063 7.39273L9.9997 17.9993L3.63574 11.6354L5.04996 10.2212L9.9997 15.1709Z"></path></svg>
+							Betere kwaliteit van uw regenwater
+						</li>
+						<li class="flex gap-2 text-xs text-brand-primary">
+							<svg class="text-brand-orange h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M9.9997 15.1709L19.1921 5.97852L20.6063 7.39273L9.9997 17.9993L3.63574 11.6354L5.04996 10.2212L9.9997 15.1709Z"></path></svg>
+							De waarde van uw woning stijgt
+						</li>
+					</ul>
+				</div>
+				<div>
+					<div class="flex gap-1 md:gap-2 mb-5 md:mb-7">
+						<img src="/img/icon-lines.svg" class="h-4 md:h-6 mt-1 md:mt-px" alt="">
+						<h2 class="text-brand-primary font-medium text-2xl/[24px] md:text-3xl/[30px]">Hoe gaan we te werk?</h2>
+					</div>
+					<ul class="list-inside space-y-1">
+						<li class="flex gap-2 text-xs text-brand-primary">
+							<span class="block rounded-full border border-brand-orange w-4 h-4 items-center flex justify-center text-brand-orange text-sm font-semibold">1</span>
+							Aanbrengen mosdodend product
+						</li>
+						<li class="flex gap-2 text-xs text-brand-primary">
+							<span class="block rounded-full border border-brand-orange w-4 h-4 items-center flex justify-center text-brand-orange text-sm font-semibold">2</span>
+							Stoomreiniging (120°) onder lage druk
+						</li>
+						<li class="flex gap-2 text-xs text-brand-primary">
+						<span class="block rounded-full border border-brand-orange w-4 h-4 items-center flex justify-center text-brand-orange text-sm font-semibold">3</span>
+							Nabehandeling of coating
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="md:w-[55%] h-full">
+				<img src="/img/about-image.JPG" class="object-cover md:h-[22.5rem] w-full" alt="">
+			</div>
+		</div>
+	</div>
+	<div class="bg-brand-orange relative">
+		<img src="/img/bg-coating.png" class="absolute left-0 inset-y-0 w-2/5 md:w-1/2 h-full z-10 object-cover" alt="">
+		<div class="bg-linear-to-l w-[41%] md:w-[51%] from-brand-orange via-brand-orange md:via-transparent absolute inset-0 z-20"></div>
+		<div class="relative z-30 container py-7">
+			<div class="w-3/4 sm:w-3/5 md:w-1/2 ml-auto lg:pr-24 xl:pr-56">
+				<h4 class="text-white font-semibold text-xl sm:text-2xl pb-3 sm:pb-4">Nabehandeling of coating</h4>
+				<div class="prose max-w-full text-white prose-p:text-xs">
+					<p>Nabehandeling: Om mos en algvorming te voorkomen brengen wij een antimos behandeling aan. Hierdoor is uw dak 2 à 3 jaar beschermd.</p>
+					<p>Coating: Om ervoor te zorgen dat uw dak er terug als nieuw uitziet, gaan wij uw volledige dak coaten in 3 lagen. Het dak wordt in hetzelfde of de kleur die u wenst gecoat.</p>
+				</div>
+			</div>
+		</div>
+	</div>
 	<Footer />
 </Layout>
