--- a/src/pages/facade-cleaning.astro
+++ b/src/pages/facade-cleaning.astro
@@ -14,5 +14,78 @@ import Footer from '@components/Footer.astro';
 			</div>
 		</div>
 	</div>
+	<div class="container pt-9 pb-12 md:pb-16">
+		<div class="xl:px-28 flex flex-col md:flex-row gap-8 md:gap-0 justify-between md:items-center">
+			<div class="md:w-2/5 lg:w-1/3 space-y-6 md:space-y-12">
+				<div>
+					<div class="flex gap-1 md:gap-2 mb-5 md:mb-7">
+						<img src="/img/icon-lines.svg" class="h-4 md:h-6 mt-1 md:mt-px" alt="">
+						<h2 class="text-brand-primary font-medium text-2xl/[24px] md:text-3xl/[30px]">Waarom uw gevel laten reinigen</h2>
+					</div>
+					<ul class="list-inside">
+						<li class="flex gap-2 text-xs text-brand-primary">
+							<svg class="text-brand-orange h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M9.9997 15.1709L19.1921 5.97852L20.6063 7.39273L9.9997 17.9993L3.63574 11.6354L5.04996 10.2212L9.9997 15.1709Z"></path></svg>
+							Voorkomt schade aan de voegen
+						</li>
+						<li class="flex gap-2 text-xs text-brand-primary">
+							<svg class="text-brand-orange h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M9.9997 15.1709L19.1921 5.97852L20.6063 7.39273L9.9997 17.9993L3.63574 11.6354L5.04996 10.2212L9.9997 15.1709Z"></path></svg>
+							De gevels houden minder water op
+						</li>
+						<li class="flex gap-2 text-xs text-brand-primary">
+							<svg class="text-brand-orange h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M9.9997 15.1709L19.1921 5.97852L20.6063 7.39273L9.9997 17.9993L3.63574 11.6354L5.04996 10.2212L9.9997 15.1709Z"></path></svg>
+							Voorkom dat water in de muur doordringt
+						</li>
+						<li class="flex gap-2 text-xs text-brand-primary">
+							<svg class="text-brand-orange h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M9.9997 15.1709L19.1921 5.97852L20.6063 7.39273L9.9997 17.9993L3.63574 11.6354L5.04996 10.2212L9.9997 15.1709Z"></path></svg>
+							Frisse, nieuwe uitstraling
+						</li>
+					</ul>
+				</div>
+				<div>
+					<div class="flex gap-1 md:gap-2 mb-5 md:mb-7">
+						<img src="/img/icon-lines.svg" class="h-4 md:h-6 mt-1 md:mt-px" alt="">
+						<h2 class="text-brand-primary font-medium text-2xl/[24px] md:text-3xl/[30px]">Hoe gaan we te werk?</h2>
+					</div>
+					<ul class="list-inside space-y-1">
+						<li class="flex gap-2 text-xs text-brand-primary">
+							<span class="block rounded-full border border-brand-orange w-4 h-4 items-center flex justify-center text-brand-orange text-sm font-semibold">1</span>
+							Plaatsen van een ontvettend middel die het vuil losweekt
+						</li>
+						<li class="flex gap-2 text-xs text-brand-primary">
+							<span class="block rounded-full border border-brand-orange w-4 h-4 items-center flex justify-center text-brand-orange text-sm font-semibold">2</span>
+							Stoomreiniging (120°) onder lage druk
+						</li>
+						<li class="flex gap-2 text-xs text-brand-primary">
+						<span class="block rounded-full border border-brand-orange w-4 h-4 items-center flex justify-center text-brand-orange text-sm font-semibold">3</span>
+							Plaatsen van een hydrofuge (op vraag van de klant)
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="md:w-[55%] h-full flex gap-2">
+				<div class="w-1/2 relative">
+					<span class="absolute left-0 bottom-4 z-20 bg-brand-orange py-1 pr-2 pl-3 text-white w-14 text-xs">Voor</span>
+					<img src="/img/before-image.jpg" class="object-cover w-full h-full" alt="">
+				</div>
+				<div class="w-1/2 relative">
+					<span class="absolute left-0 bottom-4 z-20 bg-brand-orange py-1 pr-2 pl-3 text-white w-14 text-xs">Na</span>
+					<img src="/img/after-image.png" class="object-cover w-full h-full" alt="">
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="bg-brand-orange relative">
+		<img src="/img/bg-waterproofing.JPG" class="absolute left-0 inset-y-0 w-2/5 md:w-1/2 h-full z-10 object-cover" alt="">
+		<div class="bg-linear-to-l w-[41%] md:w-[51%] from-brand-orange via-brand-orange md:via-transparent absolute inset-0 z-20"></div>
+		<div class="relative z-30 container py-7">
+			<div class="w-3/4 sm:w-3/5 md:w-1/2 ml-auto lg:pr-24 xl:pr-56">
+				<h4 class="text-white font-semibold text-xl sm:text-2xl pb-3 sm:pb-4">Hydrofoberen van de gevels</h4>
+				<div class="prose max-w-full text-white prose-p:text-xs">
+					<p>Het proces waardoor dat de gevel waterafstotend wordt gemaakt.</p>
+					<p>Er wordt een speciale vloeistof of créme aangebracht die tot 15 jaar lang zijn werk doet.</p>
+				</div>
+			</div>
+		</div>
+	</div>
 	<Footer />
 </Layout>
