--- a/src/pages/roof-cleaning.astro
+++ b/src/pages/roof-cleaning.astro
@@ -24,23 +24,23 @@ import Footer from '@components/Footer.astro';
 					</div>
 					<ul class="list-inside">
 						<li class="flex gap-2 text-xs text-brand-primary">
-							<svg class="text-brand-orange h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M9.9997 15.1709L19.1921 5.97852L20.6063 7.39273L9.9997 17.9993L3.63574 11.6354L5.04996 10.2212L9.9997 15.1709Z"></path></svg>
+							<svg class="text-brand-orange h-4 shrink-0" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M9.9997 15.1709L19.1921 5.97852L20.6063 7.39273L9.9997 17.9993L3.63574 11.6354L5.04996 10.2212L9.9997 15.1709Z"></path></svg>
 							Voorkom schade en hoge kosten
 						</li>
 						<li class="flex gap-2 text-xs text-brand-primary">
-							<svg class="text-brand-orange h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M9.9997 15.1709L19.1921 5.97852L20.6063 7.39273L9.9997 17.9993L3.63574 11.6354L5.04996 10.2212L9.9997 15.1709Z"></path></svg>
+							<svg class="text-brand-orange h-4 shrink-0" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M9.9997 15.1709L19.1921 5.97852L20.6063 7.39273L9.9997 17.9993L3.63574 11.6354L5.04996 10.2212L9.9997 15.1709Z"></path></svg>
 							Hogere levensduur van uw dak
 						</li>
 						<li class="flex gap-2 text-xs text-brand-primary">
-							<svg class="text-brand-orange h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M9.9997 15.1709L19.1921 5.97852L20.6063 7.39273L9.9997 17.9993L3.63574 11.6354L5.04996 10.2212L9.9997 15.1709Z"></path></svg>
+							<svg class="text-brand-orange h-4 shrink-0" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M9.9997 15.1709L19.1921 5.97852L20.6063 7.39273L9.9997 17.9993L3.63574 11.6354L5.04996 10.2212L9.9997 15.1709Z"></path></svg>
 							Geen vuile dakgoten meer
 						</li>
 						<li class="flex gap-2 text-xs text-brand-primary">
-							<svg class="text-brand-orange h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M9.9997 15.1709L19.1921 5.97852L20.6063 7.39273L9.9997 17.9993L3.63574 11.6354L5.04996 10.2212L9.9997 15.1709Z"></path></svg>
+							<svg class="text-brand-orange h-4 shrink-0" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M9.9997 15.1709L19.1921 5.97852L20.6063 7.39273L9.9997 17.9993L3.63574 11.6354L5.04996 10.2212L9.9997 15.1709Z"></path></svg>
 							Betere kwaliteit van uw regenwater
 						</li>
 						<li class="flex gap-2 text-xs text-brand-primary">
-							<svg class="text-brand-orange h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M9.9997 15.1709L19.1921 5.97852L20.6063 7.39273L9.9997 17.9993L3.63574 11.6354L5.04996 10.2212L9.9997 15.1709Z"></path></svg>
+							<svg class="text-brand-orange h-4 shrink-0" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M9.9997 15.1709L19.1921 5.97852L20.6063 7.39273L9.9997 17.9993L3.63574 11.6354L5.04996 10.2212L9.9997 15.1709Z"></path></svg>
 							De waarde van uw woning stijgt
 						</li>
 					</ul>
@@ -52,15 +52,15 @@ import Footer from '@components/Footer.astro';
 					</div>
 					<ul class="list-inside space-y-1">
 						<li class="flex gap-2 text-xs text-brand-primary">
-							<span class="block rounded-full border border-brand-orange w-4 h-4 items-center flex justify-center text-brand-orange text-sm font-semibold">1</span>
+							<span class="block rounded-full shrink-0 border border-brand-orange w-4 h-4 items-center flex justify-center text-brand-orange text-sm font-semibold">1</span>
 							Aanbrengen mosdodend product
 						</li>
 						<li class="flex gap-2 text-xs text-brand-primary">
-							<span class="block rounded-full border border-brand-orange w-4 h-4 items-center flex justify-center text-brand-orange text-sm font-semibold">2</span>
+							<span class="block rounded-full shrink-0 border border-brand-orange w-4 h-4 items-center flex justify-center text-brand-orange text-sm font-semibold">2</span>
 							Stoomreiniging (120°) onder lage druk
 						</li>
 						<li class="flex gap-2 text-xs text-brand-primary">
-						<span class="block rounded-full border border-brand-orange w-4 h-4 items-center flex justify-center text-brand-orange text-sm font-semibold">3</span>
+						<span class="block rounded-full shrink-0 border border-brand-orange w-4 h-4 items-center flex justify-center text-brand-orange text-sm font-semibold">3</span>
 							Nabehandeling of coating
 						</li>
 					</ul>
