--- a/src/pages/creample-cleaning.astro
+++ b/src/pages/creample-cleaning.astro
@@ -14,5 +14,67 @@ import Footer from '@components/Footer.astro';
 			</div>
 		</div>
 	</div>
+	<div class="container pt-9 pb-12 md:pb-16">
+		<div class="xl:px-28">
+			<div class="flex flex-col md:flex-row gap-8 md:gap-0 justify-between md:items-center">
+				<div class="md:w-2/5 lg:w-1/3 space-y-6 md:space-y-12">
+					<div>
+						<div class="flex gap-1 md:gap-2 mb-5 md:mb-7">
+							<img src="/img/icon-lines.svg" class="h-4 md:h-6 mt-1 md:mt-px" alt="">
+							<h2 class="text-brand-primary font-medium text-2xl/[24px] md:text-3xl/[30px]">Waarom uw crepi laten reinigen</h2>
+						</div>
+						<ul class="list-inside">
+							<li class="flex gap-2 text-xs text-brand-primary">
+								<svg class="text-brand-orange h-4 shrink-0" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M9.9997 15.1709L19.1921 5.97852L20.6063 7.39273L9.9997 17.9993L3.63574 11.6354L5.04996 10.2212L9.9997 15.1709Z"></path></svg>
+								Crepi moet onderhouden worden zodat de vervuiling aan de oppervlakte blijft en niet in de poriën van het materiaal kruipt.
+							</li>
+						</ul>
+					</div>
+					<div>
+						<div class="flex gap-1 md:gap-2 mb-5 md:mb-7">
+							<img src="/img/icon-lines.svg" class="h-4 md:h-6 mt-1 md:mt-px" alt="">
+							<h2 class="text-brand-primary font-medium text-2xl/[24px] md:text-3xl/[30px]">Hoe gaan we te werk?</h2>
+						</div>
+						<ul class="list-inside space-y-1">
+							<li class="flex gap-2 text-xs text-brand-primary">
+								<span class="shrink-0 block rounded-full border border-brand-orange w-4 h-4 items-center flex justify-center text-brand-orange text-sm font-semibold">1</span>
+								Plaatsen van een ontvettend middel die het vuil losweekt
+							</li>
+							<li class="flex gap-2 text-xs text-brand-primary">
+								<span class="shrink-0 block rounded-full border border-brand-orange w-4 h-4 items-center flex justify-center text-brand-orange text-sm font-semibold">2</span>
+								Stoomreiniging (150°) onder lage druk
+							</li>
+							<li class="flex gap-2 text-xs text-brand-primary">
+							<span class="shrink-0 block rounded-full border border-brand-orange w-4 h-4 items-center flex justify-center text-brand-orange text-sm font-semibold">3</span>
+								Extra afwerkingslaag*
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class="md:w-[55%] h-full flex gap-2">
+					<div class="w-1/2 relative">
+						<span class="absolute left-0 bottom-4 z-20 bg-brand-orange py-1 pr-2 pl-3 text-white w-14 text-xs">Voor</span>
+						<img src="/img/before-image-creample.jpg" class="object-cover w-full h-[15rem] sm:h-[18rem] lg:h-[22rem]" alt="">
+					</div>
+					<div class="w-1/2 relative">
+						<span class="absolute left-0 bottom-4 z-20 bg-brand-orange py-1 pr-2 pl-3 text-white w-14 text-xs">Na</span>
+						<img src="/img/after-image-creample.png" class="object-cover w-full h-[15rem] sm:h-[18rem] lg:h-[22rem]" alt="">
+					</div>
+				</div>
+			</div>
+			<div class="pt-8 md:pt-10">
+				<div class="flex gap-1 md:gap-2 mb-5 md:mb-7">
+					<img src="/img/icon-lines.svg" class="h-4 md:h-6 mt-1 md:mt-px" alt="">
+					<h2 class="text-brand-primary font-medium text-2xl/[24px] md:text-3xl/[30px]">Extra afwerkingslaag</h2>
+				</div>
+				<div class="prose text-brand-primary prose-p:text-xs max-w-full">
+					<p>
+							Met een extra afwerkingslaag wordt <br/> de crepi gevel zelfreinigend.
+					</p>
+					<p>Onze afwerkingslaag heeft een natuurlijk zelfreinigingseffect voor een langdurig propere gevel. Door de combinatie van een waterafstotend oppervlak en een speciale microstructuur kunnen vuildeeltjes zich niet goed hechten aan het oppervlak en nemen afrollende waterdrupples van een volgende regenbui de vuildeeltjes probleemloos mee. De netheid en esthetiek van de gevel is gegarandeerd over een langere periode.</p>
+				</div>
+			</div>
+		</div>
+	</div>
 	<Footer />
 </Layout>
