Add contact page

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@
 		<img src="/img/logo-black.png" class="h-12 lg:mx-auto" alt="">
 		<svg class="lg:hidden block text-black h-7" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M3 4H21V6H3V4ZM3 11H21V13H3V11ZM3 18H21V20H3V18Z"></path></svg>
 		<div class="hidden lg:flex gap-5 absolute top-5 right-5">
-			<a href="tel:+32 497 07 89 44" class="text-brand-secondary hover:text-black border border-brand-orange rounded-full px-3">+32 497 07 89 44</a>
+			<a href="tel:+32 497 07 89 44" class="text-brand-secondary hover:text-black transition-colors duration-300 border border-brand-orange rounded-full px-3">+32 497 07 89 44</a>
 			<form>
 				<select name="language" id="language" class="border-0 py-0 pl-0">
 					<option value="NL" class="text-brand-primary">NL</option>
@@ -13,19 +13,19 @@
 	</div>
 	<ul class="hidden lg:flex flex-wrap justify-center gap-x-6 gap-y-2.5 xl:gap-8 pt-5">
 		<li>
-			<a href="/" class="uppercase text-brand-orange hover:text-black">Home</a>
+			<a href="/" class="uppercase text-brand-orange hover:text-black transition-colors duration-300">Home</a>
 		</li>
 		<li>
-			<a href="/" class="uppercase text-brand-secondary hover:text-black">DAKREINIGING</a>
+			<a href="/" class="uppercase text-brand-secondary hover:text-black transition-colors duration-300">DAKREINIGING</a>
 		</li>
 		<li>
-			<a href="/" class="uppercase text-brand-secondary hover:text-black">GEVELREINIGING</a>
+			<a href="/" class="uppercase text-brand-secondary hover:text-black transition-colors duration-300">GEVELREINIGING</a>
 		</li>
 		<li>
-			<a href="/" class="uppercase text-brand-secondary hover:text-black">CREPIREINIGING</a>
+			<a href="/" class="uppercase text-brand-secondary hover:text-black transition-colors duration-300">CREPIREINIGING</a>
 		</li>
 		<li>
-			<a href="/" class="uppercase text-brand-secondary hover:text-black">Contact</a>
+			<a href="/" class="uppercase text-brand-secondary hover:text-black transition-colors duration-300">Contact</a>
 		</li>
 	</ul>
 </div>
