Add hover transition

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -50,7 +50,7 @@ import Footer from '@components/Footer.astro';
 												/>
 												<a href="/" class="text-right pt-5 md:pt-6 lg:pt-7 block">
 													<h3 class="text-brand-secondary uppercase text-lg md:text-xl font-medium">DAKREINIGING</h3>
-													<p class="uppercase text-brand-orange text-xs font-medium hover:text-black">LEES MEER</p>
+													<p class="uppercase text-brand-orange text-xs font-medium hover:text-black transition-colors duration-300">LEES MEER</p>
 												</a>
 											</div>
 											<div class="w-[18rem] sm:w-[22rem] md:w-[20rem] shrink-0 lg:w-[24rem] xl:w-[26rem] opacity-40">
@@ -61,7 +61,7 @@ import Footer from '@components/Footer.astro';
 												/>
 												<a href="/" class="text-right pt-5 md:pt-6 lg:pt-7 block">
 													<h3 class="text-brand-secondary uppercase text-lg md:text-xl font-medium">GEVELREINIGING</h3>
-													<p class="uppercase text-brand-orange text-xs font-medium hover:text-black">LEES MEER</p>
+													<p class="uppercase text-brand-orange text-xs font-medium hover:text-black transition-colors duration-300">LEES MEER</p>
 												</a>
 											</div>
 											<div class="w-[18rem] sm:w-[22rem] md:w-[20rem] shrink-0 lg:w-[24rem] xl:w-[26rem]">
@@ -72,7 +72,7 @@ import Footer from '@components/Footer.astro';
 												/>
 												<a href="/" class="text-right pt-5 md:pt-6 lg:pt-7 block">
 													<h3 class="text-brand-secondary uppercase text-lg md:text-xl font-medium">DAKREINIGING</h3>
-													<p class="uppercase text-brand-orange text-xs font-medium hover:text-black">LEES MEER</p>
+													<p class="uppercase text-brand-orange text-xs font-medium hover:text-black transition-colors duration-300">LEES MEER</p>
 												</a>
 											</div>
 										</div>
