Add correct link to header and footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -17,13 +17,13 @@
 					</div>
 				<ul class="flex flex-wrap justify-center gap-x-6 gap-y-2.5 xl:gap-16">
 					<li>
-						<a href="/" class="uppercase text-white hover:text-black transition-colors duration-300">DAKREINIGING</a>
+						<a href="/roof-cleaning" class="uppercase text-white hover:text-black transition-colors duration-300">DAKREINIGING</a>
 					</li>
 					<li>
-						<a href="/" class="uppercase text-white hover:text-black transition-colors duration-300">GEVELREINIGING</a>
+						<a href="/facade-cleaning" class="uppercase text-white hover:text-black transition-colors duration-300">GEVELREINIGING</a>
 					</li>
 					<li>
-						<a href="/" class="uppercase text-white hover:text-black transition-colors duration-300">CREPIREINIGING</a>
+						<a href="/creample-cleaning" class="uppercase text-white hover:text-black transition-colors duration-300">CREPIREINIGING</a>
 					</li>
 				</ul>
 				</div>
