--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -16,16 +16,16 @@
 			<a href="/" class="uppercase text-brand-orange hover:text-black transition-colors duration-300">Home</a>
 		</li>
 		<li>
-			<a href="/" class="uppercase text-brand-secondary hover:text-black transition-colors duration-300">DAKREINIGING</a>
+			<a href="/roof-cleaning" class="uppercase text-brand-secondary hover:text-black transition-colors duration-300">DAKREINIGING</a>
 		</li>
 		<li>
-			<a href="/" class="uppercase text-brand-secondary hover:text-black transition-colors duration-300">GEVELREINIGING</a>
+			<a href="/facade-cleaning" class="uppercase text-brand-secondary hover:text-black transition-colors duration-300">GEVELREINIGING</a>
 		</li>
 		<li>
-			<a href="/" class="uppercase text-brand-secondary hover:text-black transition-colors duration-300">CREPIREINIGING</a>
+			<a href="/creample-cleaning" class="uppercase text-brand-secondary hover:text-black transition-colors duration-300">CREPIREINIGING</a>
 		</li>
 		<li>
-			<a href="/" class="uppercase text-brand-secondary hover:text-black transition-colors duration-300">Contact</a>
+			<a href="/contact" class="uppercase text-brand-secondary hover:text-black transition-colors duration-300">Contact</a>
 		</li>
 	</ul>
 </div>
